✨ fix font-weight making sidebar toc lines wrap when scrolling

--- a/site/gdocs/centered-article.scss
+++ b/site/gdocs/centered-article.scss
@@ -65,6 +65,8 @@
                     border-left-color: $vermillion;
                     background: unset;
                     font-weight: bold;
+                    // Counteract the font-weight so that the text doesn't wrap when active
+                    letter-spacing: -0.09px;
                 }
                 a {
                     padding-left: 16px;
